# boost_hello_cmake

./: CMakeLists.txt  main.cpp
